--- a/Desktop/FormDepotAdminPanelBDD/src/test/resources/Properties/xpath.properties
+++ b/Desktop/FormDepotAdminPanelBDD/src/test/resources/Properties/xpath.properties
@@ -8,3 +8,7 @@ Login = //button[@type='submit']
 Searchbar = //input[@id='search']
 Searchbutton = //*[@id="root"]/body/div/div/div[2]/div/button
 FirstRow = //tbody/tr/td[2]
+Filter = //img[@alt='filter icon']
+FilterOption1 = //body/div/div/div[2]/div/div[2]/div/a[1]
+FilterOption2 = //body/div/div/div[2]/div/div[2]/div/a[2]
+FilterOption3 = //body/div/div/div[2]/div/div[2]/div/a[3]
