--- a/Desktop/FormDepotAdminPanelBDD/pom.xml
+++ b/Desktop/FormDepotAdminPanelBDD/pom.xml
@@ -9,7 +9,22 @@
     </properties>
 
     <dependencies>
-  
+  <dependencies>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.7.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.7.0</version>
+        <scope>test</scope>
+    </dependency>
+    <!-- Add other dependencies as needed -->
+</dependencies>
+
   <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>cucumber-java</artifactId>
