--- a/Desktop/FormDepotAdminPanelBDD/pom.xml
+++ b/Desktop/FormDepotAdminPanelBDD/pom.xml
@@ -1,5 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  <modelVersion>4.0.0</modelVersion>
   <groupId>FormDepotAdminPanel</groupId>
   <artifactId>FormDepotAdminPanel</artifactId>
   <version>0.0.1-SNAPSHOT</version>
@@ -66,9 +67,9 @@
 		    <version>2.0.7</version>
 		</dependency>
   </dependencies>
-  <build>
-	<plugins>
-		<plugin>
+<build>
+        <plugins>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
@@ -79,9 +80,5 @@
                 </configuration>
             </plugin>
         </plugins>
-		
-	</plugins>
-	
-  </build>
-  
+    </build>
 </project>
