updated pom for running login.feature file

--- a/Desktop/FormDepotAdminPanelBDD/pom.xml
+++ b/Desktop/FormDepotAdminPanelBDD/pom.xml
@@ -75,7 +75,10 @@
                 <version>2.22.2</version>
                 <configuration>
                     <includes>
-                        <include>**/MyRunner.java</include>
+                       <!--<include>**/MyRunner.java</include>-->
+
+                        <include>**/1_Login.feature</include>
+
                     </includes>
                 </configuration>
             </plugin>
