--- a/Desktop/FormDepotAdminPanelBDD/pom.xml
+++ b/Desktop/FormDepotAdminPanelBDD/pom.xml
@@ -45,6 +45,12 @@
     <version>7.18.0</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>7.18.0</version>
+</dependency>
 
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
