--- a/Desktop/FormDepotAdminPanelBDD/pom.xml
+++ b/Desktop/FormDepotAdminPanelBDD/pom.xml
@@ -74,17 +74,26 @@
 		</dependency>
   </dependencies>
 <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <includes>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.13.0</version>
+            <configuration>
+                <source>17</source>  <!-- Change to your installed Java version -->
+                <target>11=7</target>  <!-- Change to your installed Java version -->
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+            <configuration>
+                <includes>
                     <include>**/MyRunner.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+                </includes>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
