--- a/Desktop/FormDepotAdminPanelBDD/pom.xml
+++ b/Desktop/FormDepotAdminPanelBDD/pom.xml
@@ -81,7 +81,7 @@
             <version>3.13.0</version>
             <configuration>
                 <source>17</source>  <!-- Change to your installed Java version -->
-                <target>11=7</target>  <!-- Change to your installed Java version -->
+                <target>17</target>  <!-- Change to your installed Java version -->
             </configuration>
         </plugin>
         <plugin>
