--- a/Desktop/FormDepotAdminPanelBDD/pom.xml
+++ b/Desktop/FormDepotAdminPanelBDD/pom.xml
@@ -82,10 +82,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
-<suiteXmlFiles>
-<suiteXmlFile>**/testng.xml</suiteXmlFile>
-</suiteXmlFiles>
-</configuration>
+				<suiteXmlFiles>
+                    <suiteXmlFile>Desktop/FormDepotAdminPanelBDD/testng.xml</suiteXmlFile>
+				</suiteXmlFiles>
+				</configuration>
             </plugin>
         </plugins>
     </build>
